profile dropdown now goes on-top of everything.

--- a/Onyx/Onyx.Cartographer/Content/application.css
+++ b/Onyx/Onyx.Cartographer/Content/application.css
@@ -328,6 +328,7 @@ body {
   position: relative;
 }
 .layoutWrapper > .layoutFluidRightSection .user-header .submenu {
+  z-index: 99998;
   display: none;
   position: absolute;
   right: 0;
