Work done on project creation/viewing

--- a/Onyx/Onyx.Cartographer/Content/application.css
+++ b/Onyx/Onyx.Cartographer/Content/application.css
@@ -196,6 +196,20 @@ input[type="password"]:hover {
   line-height: 1.5em;
 }
 
+.column-container {
+  margin: 20px 0 0 0;
+}
+.column-container .left-column {
+  float: left;
+  min-width: 400px;
+  margin-bottom: 50px;
+}
+.column-container .right-column {
+  float: right;
+  min-width: 400px;
+  margin-bottom: 50px;
+}
+
 body {
   font-family: 'Source Sans Pro', sans-serif, arial;
   color: #161616;
@@ -407,19 +421,17 @@ body {
 }
 .layoutWrapper > .alertPage .innerWrapper {
   position: absolute;
-  background: white;
-  /* Old browsers */
-  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, #262626 100%);
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.35) 0%, #262626 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, #262626));
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(0%, rgba(255, 255, 255, 0.35)), color-stop(100%, #262626));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, #262626 100%);
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.35) 0%, #262626 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, #262626 100%);
+  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.35) 0%, #262626 100%);
   /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, #262626 100%);
+  background: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.35) 0%, #262626 100%);
   /* IE10+ */
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 0%, #262626 100%);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.35) 0%, #262626 100%);
   /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#262626',GradientType=0 );
   /* IE6-9 */
@@ -444,7 +456,7 @@ body {
 }
 .layoutWrapper > .alertPage .innerWrapper .wrapper .content {
   position: absolute;
-  bottom: 120px;
+  bottom: 20px;
   z-index: 1;
   width: 100%;
 }
