--- a/Onyx/Onyx.Cartographer/Content/application.scss
+++ b/Onyx/Onyx.Cartographer/Content/application.scss
@@ -7,6 +7,7 @@
 
 @import "pages/signin/index";
 
+@import "pages/column";
 @import "pages/base";
 @import "pages/sidebar";
 @import "pages/scrollable_content";
