--- a/Onyx/Onyx.Cartographer/Views/Create/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Create/Index.cshtml
@@ -1,63 +1,64 @@
-﻿@{
+﻿@using Onyx.Cartographer.Models
+@model Onyx.Cartographer.ViewModels.Project.CreateProject
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Onyx - Create Gametype";
+    ViewBag.Title = "Onyx - Get Started";
     ViewBag.VM_Create = "selected";
+    
+    var currentUser = ViewBag.CurrentUser as User;
 }
 
-<div class="dropGametypeHint">
-    <span>
-        Drag and Drop a gametype
-    </span>
-</div>
-
-<div id="gamesaveModify" style="display: none;">
+<div id="get-started">
     <h1>
-        Modify Gamesave
+        Get Started
     </h1>
 
-    <ul class="nav-tabs">
-        <li><span>STFS Package Data</span></li>
-        <li><span>Metadata</span></li>
-        <li class="active"><span>Script Data</span></li>
-    </ul>
-    <div class="viewData">
-        <div class="stfsPackageData">
-
+    <div class="column-container">
+        <div class="left-column">
+            <h2>New Project</h2>
+            
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                
+                <p>
+                    @Html.Label("Project Name")
+                    <br />
+                    <span class="error">@Html.ValidationMessageFor(p => p.ProjectName)</span>
+                    <br />
+                    @Html.TextBoxFor(p => p.ProjectName)
+                </p>
+                
+                <p>
+                    @Html.Label("Project Description")
+                    <br />
+                    <span class="error">@Html.ValidationMessageFor(p => p.ProjectDescription)</span>
+                    <br />
+                    @Html.TextBoxFor(p => p.ProjectDescription)
+                </p>
+                
+                <input type="submit" value="Get Started"/>
+            }
         </div>
-        <div class="metaData">
-
-        </div>
-        <div class="scriptData">
-            <textarea id="scriptmod" name="code" style="display: none;"></textarea>
+        <div class="left-column">
+            <h2>Recent Projects</h2>
+            
+            <ul>
+                @if (ViewData["RecentProjects"] != null)
+                {
+                    var projects = ViewData["RecentProjects"] as IEnumerable<Project>;
+                    if (projects != null)
+                    {
+                        foreach (var project in projects)
+                        {
+                            <li>@Html.ActionLink(project.Name, "Project", "Create", new { id = project.Id }, new { })</li>
+                        }
+                    }
+                }
+            </ul>
         </div>
     </div>
 </div>
-
-<style>
-    .nav-tabs {
-        cursor: pointer;
-        list-style-type: none;
-        color: white;
-        padding: 0px;
-        margin: 15px 0 20px 0;
-    }
-
-        .nav-tabs > li {
-            margin-right: 5px;
-            margin-bottom: -1px;
-            float: left;
-            padding: 0.7em;
-            background-color: #1298de;
-        }
-
-            .nav-tabs > li.active {
-                background-color: #22b3ff;
-            }
-
-    .viewData {
-        margin: 80px 0 0 0;
-    }
-</style>
 
 <!-- Utilities -->
 @Scripts.Render("~/Scripts/util/functions.js")
