Added a data validation to the gametype upload

--- a/Onyx/Onyx.Cartographer/Views/Create/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Create/Index.cshtml
@@ -45,6 +45,10 @@
                     </div>
                 </div>
                 <input type="file" id="project-stfs-upload" name="file" />
+                <br />
+                @Html.ValidationMessage("File")
+                <br />
+                <br />
 
                 <input type="submit" value="Get Started"/>
             }
