fixed file upload input name

--- a/Onyx/Onyx.Cartographer/Views/Create/Index.cshtml
+++ b/Onyx/Onyx.Cartographer/Views/Create/Index.cshtml
@@ -44,7 +44,7 @@
                         <img id="stfs-icon" />
                     </div>
                 </div>
-                <input type="file" id="project-stfs-upload" name="file" />
+                <input type="file" id="project-stfs-upload" name="stfsUpload" />
                 <br />
                 @Html.ValidationMessage("File")
                 <br />
